# ctetris

./: .gitignore  CONTRIBUTION.md  README.md  test.md
.devcontainer/: devcontainer.json
app/: appTree.md
app/src/gameConsole/: CMakeLists.txt  app.cpp  build.sh  task.md
app/src/gameConsole/include/: .gitkeep  layout.h
app/src/gameCore/: CMakeLists.txt  app.cpp  build.sh  readme.md  task.md
app/src/gameCore/TetrisGame/: TetrisGame.slnx
app/src/gameCore/TetrisGame/Tetris/: Tetris.vcxproj  main.cpp
app/src/gameCore/TetrisGame/Tetris/x64/Debug/: Tetris.exe.recipe  Tetris.ilk  vc145.idb
app/src/gameCore/TetrisGame/Tetris/x64/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tetris.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
app/src/gameCore/include/: .gitkeep
app/src/gameStory/: CMakeLists-gui.txt  CMakeLists.txt  app.cpp  build.sh  task.md
app/src/gameStory/include/: .gitkeep  layout.h
doc/: docTree.md  main.tex
doc/src/: appendix.tex  content.tex  cover.tex  index.tex
doc/src/appendix/: 01-teamContract.tex  02-teamContractValidation.tex  03-meetingMinute.tex  04-teamConflictSolving.tex
doc/src/content/: 00-Appendix.tex  00-References.tex  01-Preface.tex  02-gameStoryRequirments.tex  02-tai_lieu_gi_do.tex  03-gameConsoleRequirments.tex  04-gameCoreRequirments.tex  05-gameStoryEngineering.tex  06-gameConsoleEngineering.tex  07-gameCoreEngineering.tex  08-gameStoryGuide.tex  09-gameConsoleGuide.tex  10-gameCoreGuide.tex  11-testStrategy.tex  12-testList.tex  13-productMilestones.tex  14-projectGanttChart.tex  15-technology Adoption.tex  15-technologyAdoption.tex  16-toolsetList.tex  17-skillsetList.tex
doc/src/libs/: body.tex  footer.tex  header.tex
